apps/prod2/dl/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dl
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: kubernetes.io/arch=amd64
